<resources>
    <string name="app_name">GOT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="books">Books</string>
    <string name="houses">Houses</string>
    <string name="characters">Characters</string>
    <string name="viewpager_circle_indicator">viewpager_circle_indicator.xml</string>
    <string name="got">GOT</string>
    <string name="title">Title</string>
    <string name="title_value">Title Value</string>
    <string name="image_desc">Image</string>
    <string name="name_title">GOT Name</string>
    <string name="captions">Captions</string>
    <string name="x">X</string>
    <string name="name">Name</string>
    <string name="author">Author</string>

</resources>