<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="12dp">

        <TextView
            android:id="@+id/close_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:text="@string/x"
            android:gravity="center"
            android:layout_gravity="end"
            android:textStyle="bold"
            android:textColor="@color/text_color"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:padding="8dp"
            android:background="@drawable/detailed_border_custom">

            <ImageView
                android:id="@+id/item_imageview"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:src="@drawable/throne"
                android:layout_gravity="center"
                android:contentDescription="@string/image_desc" />
            <TextView
                android:id="@+id/item_nameview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:textAlignment="center"
                android:textColor="@color/text_color"
                android:textSize="18sp"
                android:padding="4dp"/>
            <TextView
                android:id="@+id/item_detail1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:textAlignment="center"
                android:textColor="@color/text_color"
                android:padding="4dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            android:background="@drawable/detailed_border_custom"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="4dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/item_detail_title1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title"
                    android:textAlignment="center"
                    android:textColor="@color/text_color"/>
                <TextView
                    android:id="@+id/item_detail_value1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title_value"
                    android:textAlignment="center"
                    android:padding="4dp"
                    android:textColor="@color/text_color"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="4dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/item_detail_title2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title"
                    android:textAlignment="center"
                    android:textColor="@color/text_color"/>
                <TextView
                    android:id="@+id/item_detail_value2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title_value"
                    android:textAlignment="center"
                    android:padding="4dp"
                    android:textColor="@color/text_color"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="4dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/item_detail_title3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title"
                    android:textAlignment="center"
                    android:textColor="@color/text_color"/>
                <TextView
                    android:id="@+id/item_detail_value3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title_value"
                    android:textAlignment="center"
                    android:padding="4dp"
                    android:textColor="@color/text_color"/>
            </LinearLayout>

        </LinearLayout>

</LinearLayout>